# repanda-

redpanda-data__redpanda__30108-main/: .bazelrc  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  MODULE.bazel  README.md  buf.gen.openapi.yaml  buf.gen.yaml  buf.yaml  lsan_suppressions.txt  signal.json
redpanda-data__redpanda__30108-main/.github/workflows/: build-push-gar.yml
redpanda-data__redpanda__30108-main/.helix/: Dockerfile.helix  metadata.json  run-tests-eval.sh
redpanda-data__redpanda__30108-main/.vim/: coc-settings.json
redpanda-data__redpanda__30108-main/bazel/: BUILD  bench_wrapper.py  build.bzl  cert.bzl  golden.bzl  install-deps.sh  internal.bzl  repositories.bzl  stamp_vars.sh  test.bzl
redpanda-data__redpanda__30108-main/bazel/antithesis/: BUILD  antithesis_instrumentation.cc
redpanda-data__redpanda__30108-main/bazel/clang_tidy/: BUILD  clang_tidy.bzl  clang_tidy.py
redpanda-data__redpanda__30108-main/bazel/clang_tidy/plugins/: BUILD  README.md  redpanda_lambda_coroutine_deduces_this_check.cc  redpanda_lambda_coroutine_deduces_this_check.h  redpanda_noop_check.h  redpanda_tidy_module.cc
redpanda-data__redpanda__30108-main/bazel/compilation_database_generator/: main.go
redpanda-data__redpanda__30108-main/bazel/packaging/: BUILD  go.mod  go.sum  packaging.bzl  tool.go
redpanda-data__redpanda__30108-main/bazel/packaging/scripts/: redpanda-tuner.service  redpanda.postinst  redpanda.postrm  redpanda.prerm  redpanda.service  redpanda.slice
redpanda-data__redpanda__30108-main/bazel/pbgen/: .gitignore  BUILD  README.md  go.mod  main.go  pbgen.bzl  utils.go  utils_test.go
redpanda-data__redpanda__30108-main/bazel/toolchain/: Dockerfile.llvm  Dockerfile.sysroot  README.md
redpanda-data__redpanda__30108-main/licenses/: golang_deps.tpl  rcl.md  rcl_header.txt  third_party.md
redpanda-data__redpanda__30108-main/proto/redpanda/: README.md
redpanda-data__redpanda__30108-main/proto/redpanda/datalake/: BUILD  README.md  date.proto
redpanda-data__redpanda__30108-main/src/consistency-testing/iofaults/: iofaults.py
redpanda-data__redpanda__30108-main/src/go/: .goreleaser.yaml
redpanda-data__redpanda__30108-main/src/go/rpk/: .golangci.yml  BUILD  CLAUDE.md  build.sh  go.mod  go.sum
redpanda-data__redpanda__30108-main/src/transform-sdk/js/: generate_js_provider.py  js_vm.cc  js_vm_test.cc  main.cc  package_toolchain.py
redpanda-data__redpanda__30108-main/src/transform-sdk/tests/: go.mod  go.sum
redpanda-data__redpanda__30108-main/src/v/: README.md  coding-style.md
redpanda-data__redpanda__30108-main/src/v/.vim/: coc-settings.json
redpanda-data__redpanda__30108-main/src/v/base/: BUILD  compiler_utils.h  format_to.h  oncore.h  seastar_fwd.h  type_traits.h  units.h  vassert-register.h  vassert.cc  vassert.h
redpanda-data__redpanda__30108-main/src/v/bytes/: BUILD  bytes.cc  bytes.h  hash.h  ioarray.cc  ioarray.h  iobuf.cc  iobuf.h  iobuf_parser.h  iostream.cc  random.cc  random.h
redpanda-data__redpanda__30108-main/src/v/cloud_io/: BUILD  access_time_tracker.cc  access_time_tracker.h  basic_cache_service_api.h  cache_probe.cc  cache_probe.h  cache_service.cc  cache_service.h  io_resources.cc  io_resources.h  recursive_directory_walker.cc  recursive_directory_walker.h  remote.h  (+3 more)
redpanda-data__redpanda__30108-main/tests/: .dockerignore  .gitignore  ducktape-common-retry.yml  ducktape-merge-retry.yml  ducktape-pr-retry.yml  local_venv.sh  pyrefly.toml  pyrightconfig.json  rp_cloud_cleanup.py  setup.py
redpanda-data__redpanda__30108-main/tests/docker/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  ducktape_cluster.py
redpanda-data__redpanda__30108-main/tests/rptest/: test_suite_all.yml  test_suite_azure.yml  test_suite_cloud_topics.yml  test_suite_ec2.yml  test_suite_fuzz.yml  test_suite_gcp_temporary.yml  test_suite_iceberg_cloud.yml  test_suite_nightly.yml  test_suite_quick.yml  trim_results.py  util.py
redpanda-data__redpanda__30108-main/tools/: BUILD  bazel  check-copyright-year.sh  clang-tool.sh  coverage_dash.py  dev_cluster.py  dt  format-py  format_cc.sh  gen_coverage.py  perf2bolt  redpanda-gdb.py  regenerate_ducktape_protos.sh  ruff  run-debug  single_test_cov.sh
redpanda-data__redpanda__30108-main/tools/antithesis/: ducktape_test_package.py  single_binary_test_package.py
redpanda-data__redpanda__30108-main/tools/bazel-tools/: BUILD  debug.sh
redpanda-data__redpanda__30108-main/tools/build-perf/: build-timer.py
redpanda-data__redpanda__30108-main/tools/cloud_storage_name_mapper/: cloud_storage_name_mapper.py
redpanda-data__redpanda__30108-main/tools/consumer_offsets_recovery/: main.py
redpanda-data__redpanda__30108-main/tools/controller_forced_reconfiguration/: invoke_controller_reconfiguration.py
redpanda-data__redpanda__30108-main/tools/dashboards/: cloud_topics.json
redpanda-data__redpanda__30108-main/tools/docker/: bazel.dockerfile
redpanda-data__redpanda__30108-main/tools/go-comment-pbgen/: .gitignore  BUILD  README.md  generator.go  go.mod  main.go  run-plugin.sh
redpanda-data__redpanda__30108-main/tools/group_id_mapper/: mapper.py
redpanda-data__redpanda__30108-main/tools/leader_transfer_command_generator/: leader_transfer_command_generator.py
redpanda-data__redpanda__30108-main/tools/metrics-mock/: metrics-mock.py  metrics-parser.py
redpanda-data__redpanda__30108-main/tools/offline_log_viewer/: consumer_groups.py  consumer_offsets.py  controller.py  crash_report.py  kafka.py  kvstore.py  model.py  reader.py  storage.py  topic_manifest.py  tx_coordinator.py  viewer.py
redpanda-data__redpanda__30108-main/tools/p/: Dockerfile
redpanda-data__redpanda__30108-main/tools/pgo_bolt/: train_pgo.py
redpanda-data__redpanda__30108-main/tools/rp_storage_tool/: Cargo.toml
redpanda-data__redpanda__30108-main/tools/schema_registry_tools/: schemas_command_generator.py
redpanda-data__redpanda__30108-main/tools/type-checking/: Dockerfile  README.md  requirements.txt  type-check-strictness.json  type-check.py  type-check.sh
(+4464 files in other folders)
